feat: movie update and delete route added
